# SirinArcade

./: .gitignore  Dockerfile  Makefile  build.cfg  build_env.mk  build_functions.mk
build_env/: Dockerfile  build_env.mk
build_utils/: build_functions.mk  rln  subsystem.mk
sirin_arcade/: .gitignore
sirin_arcade/arcades/lobby/: CMakeLists.txt
sirin_arcade/arcades/logo/src/: main.c
sirin_arcade/assets/system/logo/: CMakeLists.txt
sirin_arcade/assets/system/logo/src/: main.c
sirin_arcade/client/: CMakeLists.txt
sirin_arcade/client/src/: main.c
sirin_arcade/clients/ui/: CMakeLists.txt  ui.mk
sirin_arcade/clients/ui/src/: main.c
sirin_arcade/core/: .gitignore  CMakeLists.txt  Makefile
sirin_arcade/core/assets/: intro.fms  main_menu.fms
sirin_arcade/core/src/: main.c
sirin_arcade/sdk/: .gitignore  CMakeLists.txt  Makefile  sdk.mk
sirin_arcade/sdk/clang/arcade-alsa-player/: CMakeLists.txt  arcade-alsa-player.mk
sirin_arcade/sdk/clang/arcade-alsa-player/inc/: alsa-player.h
sirin_arcade/sdk/clang/arcade-ncurses-drawer/: CMakeLists.txt  arcade-ncurses-drawer.mk
sirin_arcade/sdk/clang/arcade-ncurses-drawer/inc/private/: ncurses-drawer.h
sirin_arcade/sdk/clang/arcade-ncurses-drawer/inc/public/: ncurses-drawer.h
sirin_arcade/sdk/clang/arcade-ncurses-drawer/src/: ncurses-drawer.c
sirin_arcade/sdk/private/: render.h  sound.h
sirin_arcade/sdk/public/: render.h  sound.h
sirin_arcade/sdk/rust/arcade-packets/: Cargo.toml  arcade-packets.mk  build.rs
sirin_arcade/sdk/rust/arcade-packets/src/: ap_debug.rs  lib.rs
sirin_arcade/sdk/src/: render.c  sound.c
sirin_arcade/server/: Cargo.toml
sirin_arcade/server/communication-data/: Cargo.toml  build.rs
sirin_arcade/server/communication-data/src/: lib.rs
sirin_arcade/server/help-for-c/: Cargo.toml
sirin_arcade/server/help-for-c/src/: lib.rs
sirin_arcade/server/src/: main.rs
sirin_arcade/servers/game/: Cargo.toml  server.mk
sirin_arcade/servers/game/src/: main.rs
sirin_arcade/servers/resources/: server.sh
sirin_arcades/: .clang-format  .gitignore  sirin_arcades.mk
sirin_arcades/arcades/: arcades.mk
sirin_arcades/arcades/lobby/: CMakeLists.txt  lobby.mk
sirin_arcades/arcades/logo/: CMakeLists.txt  logo.mk
sirin_arcades/arcades/logo/src/: logo.txt  main.c
sirin_arcades/arcades/menu/: CMakeLists.txt  menu.mk
sirin_arcades/arcades/menu/src/: main.c
sirin_arcades/arcades/pong/: .gitignore  CMakeLists.txt  pong.mk
sirin_arcades/arcades/pong/src/: main.c
sirin_arcades/clients/: clients.mk
sirin_arcades/clients/ui/: CMakeLists.txt  ui.mk
sirin_arcades/clients/ui/src/: main.c
sirin_arcades/sdk/: sdk.mk
sirin_arcades/sdk/clang/controller/: CMakeLists.txt  controller.mk
sirin_arcades/sdk/clang/controller/inc/: controller.h
sirin_arcades/sdk/clang/controller/src/: controller.c
sirin_arcades/sdk/clang/resource-loader/: resource-loader.mk
sirin_arcades/sdk/clang/resource_loader/: resource_loader.mk
sirin_arcades/sdk/clang/resource_loader/inc/: resource_loader.h
sirin_arcades/sdk/clang/resource_loader/src/: resource_loader.c
sirin_arcades/sdk/clang/sound-player/: CMakeLists.txt  sound-player.mk
sirin_arcades/sdk/clang/sound-player/inc/: sound-player.h
sirin_arcades/sdk/clang/terminal-drawer/: CMakeLists.txt  terminal-drawer.mk
sirin_arcades/sdk/clang/terminal-drawer/inc/private/: terminal-drawer.h
sirin_arcades/sdk/clang/terminal-drawer/inc/public/: terminal-drawer.h
sirin_arcades/sdk/clang/terminal-drawer/src/: ncurses-drawer.c
sirin_arcades/sdk/containers/: CMakeLists.txt  containers.mk
sirin_arcades/sdk/containers/inc/: vector.h
sirin_arcades/sdk/containers/src/: vector.c
sirin_arcades/sdk/events_bus/: Cargo.toml  build.rs  events_bus.mk
sirin_arcades/sdk/events_bus/src/: ap_debug.rs  ap_types.rs
sirin_arcades/sdk/graphic_backend/: .gitignore  CMakeLists.txt  graphic_backend.mk
sirin_arcades/sdk/graphic_backend/inc/: graphic_backend.h
sirin_arcades/sdk/graphic_backend/src/: graphic_backend.c
sirin_arcades/sdk/resource_loader/: CMakeLists.txt  resource_loader.mk
sirin_arcades/sdk/resource_loader/src/: resource_loader.c
sirin_arcades/sdk/rust/events-bus/: build.rs  events-bus.mk
sirin_arcades/sdk/rust/events-bus/src/: ap_types.rs  lib.rs
sirin_arcades/sdk/sound_player/: CMakeLists.txt  sound_player.mk
sirin_arcades/sdk/sound_player/resources/: .asoundrc.tmpl
sirin_arcades/sdk/sound_player/src/: alsa-player.c
sirin_arcades/sdk/tui_io/: CMakeLists.txt  tui_io.mk
sirin_arcades/sdk/tui_io/inc/: tui_io.h
sirin_arcades/sdk/tui_io/inc/private/: tui_io.h
sirin_arcades/sdk/tui_io/inc/public/: tui_io.h
sirin_arcades/sdk/tui_io/src/: controller.c  ncurses-drawer.c
sirin_arcades/servers/: servers.mk
sirin_arcades/servers/referee/: Cargo.toml  referee.mk
sirin_arcades/servers/referee/src/: main.rs
sirin_arcades/servers/supplier/: supplier.mk  supplier.sh
